--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "npm":"6.9.0"
   },
   "dependencies": {
+    "react-router-dom": "latest",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-scripts": "3.2.0"
